Closed
Bug 228550
Opened 22 years ago
Closed 21 years ago
[import] Importing mail messages from Eudora stops after a little time, without any message, then crashes [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ]
Categories
(Thunderbird :: Migration, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird0.9
People
(Reporter: antonio.angelo, Assigned: mscott)
Details
(Keywords: crash, fixed-aviary1.0, hang)
Crash Data
Attachments
(1 file)
|
637 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; it-IT; rv:1.4) Gecko/20030624
Build Identifier: Mozilla/5.0 (Windows; U; Win98; it-IT; rv:1.4) Gecko/20030624
After having installed Thunderbird 0.4 (20031205), Italian localization, I run
successfully the Import utility for Address Book from Eudora (5.2.0.9 -
Sponsored Mode), while import of mail messages stops after a few minutes without
any warning.
Available buttons in the window remains inhibited except for "Annulla" (Cancel).
Reproducible: Always
Steps to Reproduce:
1. Menu Strumenti > Importa... (Tools > Import)
2. Posta > Avanti (Mail > Next)
3. Select "Eudora", click Avanti (Next)
Actual Results:
The procedure stops after a few minutes, without any warning.
A new folder "Eudora Posta" (empty) appears under te tree "Local Folder"
Expected Results:
I supposed to find the new folder "Eudora Posta" containing all messages
previously in Eudora.
Comment 1•21 years ago
|
||
I'm seeing this too on Thunderbird 0.7.1 on WinXP, importing mail from Eudora 6.1.2.
Talkback ID is TB221061Q.
Oddly enough, the crash is Thunderbird only. Mozilla 1.7 is able to import the
mail fine.
As comment 0 says, Thunderbird hangs. If you leave it for long enough (a few
hours), eventually it will crash. That's when I was able to send the talkback
report.
Severity: major → critical
Flags: blocking-aviary1.0?
Summary: Importing mail messages from Eudora stops after a little time, without any message. → Importing mail messages from Eudora stops after a little time, without any message, then crashes.
Whiteboard: Talkback ID: TB221061Q
Comment 2•21 years ago
|
||
It appears that this crash may happen importing messages from Communicator 4.x
as well. I got a report on this on IRC.
Comment 3•21 years ago
|
||
I have the same problem with Mozilla 1.7 on Windows XP. Hangs for a long time
and then crashes.
Comment 4•21 years ago
|
||
Due to a recent Talkback database upgrade aren't older incidents available.
Could I ask you (Ali, Quentin, Antonio) again for TalkBack incident ID? I do
apologize for complication.
Keywords: talkbackid
Whiteboard: Talkback ID: TB221061Q
Comment 5•21 years ago
|
||
(In reply to comment #4)
> Due to a recent Talkback database upgrade aren't older incidents available.
> Could I ask you (Ali, Quentin, Antonio) again for TalkBack incident ID? I do
> apologize for complication.
Done. TB321661G.
This time I used the same steps to reproduce, but it crashed much faster. Yay!
If it's going to crash, it may as well do it quickly. :)
Keywords: talkbackid
Whiteboard: Talkback ID: TB321661G
Comment 6•21 years ago
|
||
TB321661G:
ntdll.dll + 0x85c0 (0x77f585c0)
msvcrt.dll + 0x1ac14 (0x77c2ac14)
msvcrt.dll + 0x1ac2a (0x77c2ac2a)
nsEudoraCompose::ConvertSysToUnicode
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/eudora/src/nsEudoraCompose.cpp,
line 581]
nsEudoraCompose::GetHeaderValue
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/eudora/src/nsEudoraCompose.h,
line 134]
nsEudoraCompose::SendTheMessage
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/eudora/src/nsEudoraCompose.cpp,
line 601]
nsEudoraMailbox::ImportMailbox
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/eudora/src/nsEudoraMailbox.cpp,
line 287]
ImportEudoraMailImpl::ImportMailbox
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/eudora/src/nsEudoraImport.cpp,
line 530]
ImportMailThread
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/mailnews/import/src/nsImportMail.cpp,
line 887]
_PR_NativeRunThread
[e:/builds/tbird-0.7.2/WINNT_5.0_Clobber/mozilla/nsprpub/pr/src/threads/combined/pruthr.c,
line 455]
kernel32.dll + 0x1d33b (0x77e7d33b)
-> Migration
Component: Mail Window Front End → Migration
Keywords: talkbackid
Summary: Importing mail messages from Eudora stops after a little time, without any message, then crashes. → Importing mail messages from Eudora stops after a little time, without any message, then crashes [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ]
Whiteboard: Talkback ID: TB321661G
Similar crash on Eudora import on Mac OSX. I have a full crash.log if it will help. Seems to be in:
nsEudoraMailbox::FindStartLine(SimpleBufferTonyRCopiedOnce&) + 0x44
Added information:
It seems to have imported mailboxes more or less OK up until the point of the crash,
EXCEPT THAT:
0, 1 or more messages at the end of each mailbox seem to be missing (sometimes it gets it right,
usually it misses 1 email, sometimes 2 or 3).
I have a nice test case, a mailbox with 4 emails in it, that TBird only imports 3 of.
| Assignee | ||
Comment 9•21 years ago
|
||
Adam I see you are running a debug build. Can you try this patch out to see if
it fixes the crash?
Updated•21 years ago
|
Summary: Importing mail messages from Eudora stops after a little time, without any message, then crashes [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ] → [import] Importing mail messages from Eudora stops after a little time, without any message, then crashes [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ]
| Assignee | ||
Comment 10•21 years ago
|
||
I think I just checked in a fix for this into the the aviary branch for 0.8. Can
someone who sees this give tomorrow's nightly build (8/31) a spin?
Target Milestone: --- → Thunderbird0.9
Comment 11•21 years ago
|
||
Scott, we'll give this a good look first thing in the morning.
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Whiteboard: fixed-aviary-1.0
| Assignee | ||
Comment 12•21 years ago
|
||
trebor, how is this looking in the 0.8 release? did the patch fix it?
Updated•21 years ago
|
Keywords: fixed-aviary1.0
Whiteboard: fixed-aviary-1.0
| Assignee | ||
Comment 13•21 years ago
|
||
trebor, have you had a chance to see how this worked out in 0.8?
| Assignee | ||
Comment 14•21 years ago
|
||
I'm marking this fixed since this issue should have been branch only if the
patch really did fix it.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Flags: blocking-aviary1.0? → blocking-aviary1.0+
Resolution: --- → FIXED
Comment 15•21 years ago
|
||
verified importing from various mail apps: Eudora, Moz 1.7, etc... imports data
correctly on latest 20041124 builds
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Crash Signature: [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ]
You need to log in
before you can comment on or make changes to this bug.
Description
•