Bug #228550 --> [import] Importing mail messages from Eudora can trigger a crash [@ ntdll.dll - nsEudoraCompose::ConvertSysToUnicode ]